Bug 1153609 - Push layers for cleartype when trying to draw cleartype glyphs to a transparent layer. r=jrmuizel, a=sledru

This patch lets us repush all layers with their backgrounds copied when drawing subpixel AA'ed text to a transparent surface. This can be wasteful since the last layer that was pushed could already have had its pixels where the glyphs will be drawn made opaque, however we have no way of knowing this so we have to always repush the layers.